--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-
-    <style>
-      body {
-        margin: 0;
-      }
-    </style>
   </head>
   <body>
-    <div>
-      <canvas id="pixiApp"></canvas>
-    </div>
+    <div id="pixiApp" class="pixi-container"></div>
   </body>
 </html>
